--- a/Frontend/src/app/landing/landing.html
+++ b/Frontend/src/app/landing/landing.html
@@ -2,6 +2,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
+                <img src="https://i.pinimg.com/1200x/4f/ab/45/4fab453aab938800010de4ee90648f63.jpg" alt="Flatera Logo" class="logo-img">
                 <h1>Flatera</h1>
             </div>
             <div class="nav-menu">
