--- a/Frontend/src/app/auth/login/login.html
+++ b/Frontend/src/app/auth/login/login.html
@@ -2,7 +2,10 @@
   <div class="auth-card">
     <!-- Header -->
     <div class="auth-header">
-      <h1>Flatera</h1>
+      <div class="nav-logo">
+        <img src="https://i.pinimg.com/1200x/4f/ab/45/4fab453aab938800010de4ee90648f63.jpg" alt="Flatera Logo" class="logo-img">
+        <h1>Flatera</h1>
+      </div>
       <p>Welcome back to Luxury Apartment Rentals</p>
     </div>
 
